--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "afinn": "^1.0.3",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "dns": "^0.2.2",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "lucide-react": "^0.475.0",
+    "natural": "^8.0.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vader-sentiment": "^1.1.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
