--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/natural": "^5.1.5",
+    "@types/stopword": "^2.0.3",
     "afinn": "^1.0.3",
+    "apos-to-lex-form": "^1.0.5",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
@@ -24,6 +27,10 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
+    "readline": "^1.3.0",
+    "sentiment": "^5.0.2",
+    "spelling-corrector": "^3.0.0",
+    "stopword": "^3.1.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vader-sentiment": "^1.1.3",
