--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "readline": "^1.3.0",
+    "recharts": "^2.15.1",
     "sentiment": "^5.0.2",
     "spelling-corrector": "^3.0.0",
     "stopword": "^3.1.4",
@@ -47,5 +48,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
