--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@types/natural": "^5.1.5",
     "@types/stopword": "^2.0.3",
     "afinn": "^1.0.3",
