--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@lmstudio/sdk": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@types/natural": "^5.1.5",
     "@types/stopword": "^2.0.3",
     "afinn": "^1.0.3",
