--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.475.0",
+    "mssql": "^11.0.1",
     "natural": "^8.0.1",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/leaflet": "^1.9.16",
+    "@types/mssql": "^9.1.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
